# linear_allocator

./: CMakeLists.txt  README.md
src/cpp/: linear_allocator.hpp  main.cpp
